# rust-merkle-tree

./: .babelrc  Cargo.toml  README.md  audit.txt  index.d.ts  index.js  package-lock.json  package.json  tsconfig.json
.github/workflows/: CI.yml
__test__/: ChecksumMerkle.spec.ts  MerkleTree.ts  Performance.spec.ts  ReceiptMerkleTree.spec.ts  StateMerkleTree.spec.ts  generator.ts  tsconfig.json
__test__/new/: ChecksumMerkleNew.ts  MerkleTree.ts  ReceiptMerkleTreeNew.ts  StateMerkleTreeNew.ts
__test__/old/: ChecksumMerkle.ts  MerkleTree.ts  ReceiptMerkleTree.ts  StateMerkleTree.ts
__test__/types/: IBlockHeaderDocument.ts  ZeroValue.ts
example/: ChecksumMerkle.ts  MerkleTree.ts  ReceiptMerkleTree.ts  StateMerkleTree.ts
npm/android-arm-eabi/: README.md  package.json
npm/android-arm64/: README.md  package.json
npm/darwin-arm64/: README.md  package.json
npm/darwin-universal/: README.md  package.json
npm/darwin-x64/: README.md  package.json
npm/freebsd-x64/: README.md  package.json
npm/linux-arm-gnueabihf/: README.md  package.json
npm/linux-arm-musleabihf/: README.md  package.json
npm/linux-arm64-gnu/: README.md  package.json
npm/linux-arm64-musl/: README.md  package.json
npm/linux-riscv64-gnu/: README.md  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/linux-x64-musl/: README.md  package.json
npm/win32-arm64-msvc/: README.md  package.json
npm/win32-ia32-msvc/: README.md  package.json
npm/win32-x64-msvc/: README.md  package.json
src/: lib.rs
src/domain/: hash.rs  mod.rs  proof.rs  tree.rs
src/interfaces/: mod.rs
(+5 files in other folders)
