#cargo-features = ["edition2021"]

[package]
edition = "2021"
name = "rust-merkle-tree"
version = "0.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = { version = "2.16.11", default-features = false, features = ["napi8", "tokio_rt"] }
napi-derive = "2.16.12"
anyhow = "1.0.89"
hex = "0.4.3"
sha2 = { version = "0.10", default-features = false }
itertools = "0.13.0"


[build-dependencies]
napi-build = "2.1.3"

[profile.release]
lto = true
strip = "symbols"
